JS loads question and records answers

--- a/holiday-quiz.html.html
+++ b/holiday-quiz.html.html
@@ -25,11 +25,12 @@
             <p id="question"></p>
 
             <div class="buttons">
-                <button id="btn0"><span id="choice0"></span></button>
-                <button id="btn1"><span id="choice1"></span></button>
-                <button id="btn2"><span id="choice2"></span></button>
-                <button id="btn3"><span id="choice3"></span></button>
+                <button id="btn0"><span id="choice0" onclick="checkAnswers(event)"></span></button>
+                <button id="btn1"><span id="choice1" onclick="checkAnswers(event)"></span></button>
+                <button id="btn2"><span id="choice2" onclick="checkAnswers(event)"></span></button>
+                <button id="btn3"><span id="choice3" onclick="checkAnswers(event)"></span></button>
             </div>
+
         </section>
         <footer class="flex-container">
             <p id="correct" class="footer">Correct Answers</p>
