functioning game with 4 questions selected randomly

--- a/holiday-quiz.html.html
+++ b/holiday-quiz.html.html
@@ -32,6 +32,12 @@
             </div>
 
         </section>
+        <div id="results">
+            <div id="results-div">
+
+
+            </div>
+        </div>
         <footer class="flex-container">
             <p id="correct" class="footer">Correct Answers</p>
             <p id="wrong" class="footer">Wrong Answers</p>
