Added Game Over and few more questions

--- a/holiday-quiz.html.html
+++ b/holiday-quiz.html.html
@@ -33,10 +33,7 @@
 
         </section>
         <div id="results">
-            <div id="results-div">
-
-
-            </div>
+            <div id="results-div"></div>
         </div>
         <footer class="flex-container">
             <p id="correct" class="footer">Correct Answers</p>
