--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Baloo+2&display=swap" rel="stylesheet">
     <title>Holiday Quiz</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
     <div class="container">
@@ -25,12 +25,15 @@
             <p id="question"></p>
 
             <div class="buttons">
-                <button id="btn0"><span id="choice0" onclick="checkAnswers(event)"></span></button>
-                <button id="btn1"><span id="choice1" onclick="checkAnswers(event)"></span></button>
-                <button id="btn2"><span id="choice2" onclick="checkAnswers(event)"></span></button>
-                <button id="btn3"><span id="choice3" onclick="checkAnswers(event)"></span></button>
+                <button id="choice0" onclick="checkAnswers(event)"></button>
+                <button id="choice1" onclick="checkAnswers(event)"></button>
+                <button id="choice2" onclick="checkAnswers(event)"></button>
+                <button id="choice3" onclick="checkAnswers(event)"></button>
+                <!-- <button id="btn0" onclick="checkAnswers(event)"><span id="choice0"></span></button>
+                <button id="btn1" onclick="checkAnswers(event)"><span id="choice1"></span></button>
+                <button id="btn2" onclick="checkAnswers(event)"><span id="choice2"></span></button>
+                <button id="btn3" onclick="checkAnswers(event)"><span id="choice3"></span></button> -->
             </div>
-
         </section>
         <div id="results">
             <div id="results-div"></div>
@@ -43,7 +46,7 @@
     </div>
 
 
-<script src="script.js"></script>
+<script src="assets/js/script.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
